Adjusted div centering Adjusted the appending of Li's To-Do: -Fix Form Centering and spacing -Add delete Function to added Li's

--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
-#mainDiv{
+.container{
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 100vh;
 }
+
